- Fixed: Membership based protection message
- Fixed: Advanced Menu Protection Replace Menu not working
- Fixed: Simulation Box on frontend overlaps with navigation
- Fixed: Content Protection Message based on membership protection
- Fixed: Payment gateways sandbox mode is changed to live on update
- Fixed: Expired date mismatch with the original expired date in paypal


1.0.2.6
----------------------------------------------------------------------
- Added: Constant 'MS_DISABLE_WP_NEW_USER_NOTIFICATION' to disable WP default welcome on registration
- Added: Constant 'MS_PAYPAL_TRIAL_SUBSCRIPTION' to enable subscription for Paypal when trial mode is enabled (works only at Paypal)
- Added: Constant 'MS_PROCESS_PER_BATCH' to set number of members for processing per batch
- Added: Addon - WP reCaptcha integration
- Added: Batch Process - Membership Status check, helpful when you have lots of members
- Enhancement: Display warning in HELP page if cron jobs are disabled
- Fixed: User could not use same invitation code for different memberships
- Fixed: Confirmation emails not sent when registering new user from admin end
- Fixed: Category protected posts was being appeared in home and search result page
- Fixed: Warning on edit membership screen when % sign is in the membership name
- Fixed: Subsite users subscription details can't be edited
- Fixed: Visitors coming from search engines links get blank page, Error 500
- Fixed: Upgrade path is ignored when a member is logged in but has no subscription
- Fixed: Media Protection - Individual Media files protection doesn't work if embedded
- Fixed: Media Protection - changes attachment URLs but does not revert when disabled
- Fixed: Media Protection - changing URL of non protected media items
- Fixed: Media Protection - Linked media URL was not masking
- Fixed: Media Protection - Video file was not playing
- Fixed: XProfile Date field was not being saved in registration form
- Fixed: White screen in WP-Touch settings page